[project]
authors = [{name = "Konrad Rokicki", email = "rokickik@janelia.hhmi.org"}]
dependencies = []
name = "claude-log-viewer"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
textual = ">=0.86"
rich = ">=13.9"

[tool.pixi.tasks]
viewer = "python viewer.py"
